Added sidebar filter creation guide [#389 state:updated]

--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -83,4 +83,8 @@ h3. For ubiquo developers
    This guide covers the process needed to update and publish the ubiquo guides and rdoc.
 <% end %>
 
+<% guide("How to create ubiquo sidebar filters", 'ubiquo_filters.html', :rdoc => false) do %>
+   This guide describes how to develop new ubiquo sidebar filters.
+<% end %>
+
 </dl>
